--- a/trunk/CrucibleData/Properties/Settings.settings
+++ b/trunk/CrucibleData/Properties/Settings.settings
@@ -2,13 +2,13 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CrucibleData.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="LoginUrl" Type="System.String" Scope="User">
+    <Setting Name="CrucibleLoginUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://fisheye.inside.nokiasiemensnetworks.com/rest-service/auth-v1/login?userName={0}&amp;password={1}</Value>
     </Setting>
-    <Setting Name="ReviewsUrl" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://fisheye.inside.nokiasiemensnetworks.com/rest-service/reviews-v1/filter/allClosedReviews?FEAUTH={0}</Value>
+    <Setting Name="CrucibleReviewsUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://fisheye.inside.nokiasiemensnetworks.com/rest-service/reviews-v1/filter?project={0}&amp;FEAUTH={1}</Value>
     </Setting>
-    <Setting Name="CommentUrl" Type="System.String" Scope="User">
+    <Setting Name="CrucibleCommentUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://fisheye.inside.nokiasiemensnetworks.com/rest-service/reviews-v1/{0}/comments?FEAUTH={1}</Value>
     </Setting>
     <Setting Name="CrucibleUserName" Type="System.String" Scope="User">
@@ -20,7 +20,7 @@
     <Setting Name="CrucibleProject" Type="System.String" Scope="User">
       <Value Profile="(Default)">RNCUP</Value>
     </Setting>
-    <Setting Name="AcceptStrings" Type="System.Collections.Specialized.StringCollection" Scope="User">
+    <Setting Name="CrucibleAcceptStrings" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;string&gt;accepted&lt;/string&gt;
@@ -32,14 +32,17 @@
     <Setting Name="CrucibleRESTAPIGuide" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://docs.atlassian.com/fisheye-crucible/latest/wadl/crucible.html#d2e526</Value>
     </Setting>
-    <Setting Name="CrucibleData_com_nokiasiemensnetworks_inside_jira_JiraSoapServiceService" Type="(Web Service URL)" Scope="Application">
+    <Setting Name="JiraWebServiceUrl" Type="(Web Service URL)" Scope="User">
       <Value Profile="(Default)">https://jira.inside.nokiasiemensnetworks.com/rpc/soap/jirasoapservice-v2</Value>
     </Setting>
     <Setting Name="JiraProjectName" Type="System.String" Scope="User">
       <Value Profile="(Default)">RNC</Value>
     </Setting>
-    <Setting Name="JiraWebServiceBinding" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://jira.inside.nokiasiemensnetworks.com/rpc/soap/jirasoapservice-v2</Value>
+    <Setting Name="CrucibleFetchAllReviews" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="JiraAddlCustomField" Type="System.String" Scope="User">
+      <Value Profile="(Default)">customfield_11383</Value>
     </Setting>
   </Settings>
 </SettingsFile>
